[package]
name = "time-hms"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Convert a duration in seconds to a representation in hours, minutes and seconds"
repository = "https://github.com/ad-8/time-hms"
readme = "README.md"
keywords = ["time", "hms", "hours", "minutes", "seconds"]
categories = ["date-and-time"]

[dependencies]
